fix (hex viewer): mobile && fix footer overflow

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -126,6 +126,7 @@ html {
 body {
 	min-height: 100vh;
 
+	overflow-x: hidden;
 	background: var(--app-background);
 
 	font-family: "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
@@ -160,6 +161,11 @@ body {
 
 .copyable {
 	cursor: copy;
+}
+
+.clickable {
+	cursor: pointer;
+	user-select: none;
 }
 
 .fade-enter-active,
